Se corrigen errores al mostrar la informacion al final

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
             <p class="info"></p>
             <div class="pep-fam-confirm">
               <p class="info-text">Entidad:</p>
-                  <p class="info-pep-fam"></p>
-                  <p class="info-text">Cargo ocupado:</p>
-                  <p class="info-pep-fam"></p>
+              <p class="info-pep-fam"></p>
+              <p class="info-text">Cargo ocupado:</p>
+              <p class="info-pep-fam"></p>
             </div>
           </div>
           <div class="info-section">
@@ -250,42 +250,33 @@
             <p class="info-text">Selfie:</p>
             <img src="" alt="selfie-confirm" class="selfie-confirm">
           </div>
-          <div class="boletas-container">
-            <div class="titulo titulo-confirm">
-              <h3>Foto de las Boletas</h3>
-            </div>
-            <div class="info-section">
-              <p class="info-text">Boleta de IPS:</p>
-              <img src="" alt="boleta-ips" class="boleta-ips">
-            </div>
-            <div class="info-section">
-              <p class="info-text">Boleta de Salario:</p>
-              <img src="" alt="boleta-salario" class="boleta-salario">
-            </div>
-          </div>
           <div class="archivos-container">
             <div class="titulo titulo-confirm">
               <h4>Archivos Subidos</h3>
             </div>
             <div class="info-section">
               <p class="info-text">Archivo 1:</p>
-              <p class="info-doc1"></p>
+              <p class="info-doc1 info-doc"></p>
             </div>
             <div class="info-section">
               <p class="info-text">Archivo 2:</p>
-              <p class="info-doc2"></p>
+              <p class="info-doc2 info-doc"></p>
             </div>
             <div class="info-section">
               <p class="info-text">Archivo 3:</p>
-              <p class="info-doc3"></p>
+              <p class="info-doc3 info-doc"></p>
             </div>
             <div class="info-section">
               <p class="info-text">Archivo 4:</p>
-              <p class="info-doc4"></p>
+              <p class="info-doc4 info-doc"></p>
             </div>
             <div class="info-section">
               <p class="info-text">Archivo 5:</p>
-              <p class="info-doc5"></p>
+              <p class="info-doc5 info-doc"></p>
+            </div>
+            <div class="info-section">
+              <p class="info-text">Archivo 6:</p>
+              <p class="info-doc5 info-doc"></p>
             </div>
           </div>
           <div class="info-section">
