--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
-  <script src="./js/index.js" type="module" defer></script>
+  <script src="./js/index.js" defer></script>
 </head>
 
 <body>
