Se finaliza la estetica en los celulares

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <body>
   <div class="main-container">
     <div class="form-container">
-      <div class="header">
-        <img class="logo-finlatina" id="inicio" src="./img/logo.png" alt="logo">
-      </div>
+      <a href="https://www.finlatina.com.py/">
+        <div class="header">
+          <img class="logo-finlatina" id="inicio" src="./img/logo.png" alt="logo">
+        </div>
+      </a>
 
       <div class="container-progress">
 
@@ -255,27 +257,27 @@
               <h4>Archivos Subidos</h3>
             </div>
             <div class="info-section">
-              <p class="info-text">Archivo 1:</p>
+              <p class="info-text">Nombre de Archivo:</p>
               <p class="info-doc1 info-doc"></p>
             </div>
             <div class="info-section">
-              <p class="info-text">Archivo 2:</p>
+              <p class="info-text">Nombre de Archivo:</p>
               <p class="info-doc2 info-doc"></p>
             </div>
             <div class="info-section">
-              <p class="info-text">Archivo 3:</p>
+              <p class="info-text">Nombre de Archivo:</p>
               <p class="info-doc3 info-doc"></p>
             </div>
             <div class="info-section">
-              <p class="info-text">Archivo 4:</p>
+              <p class="info-text">Nombre de Archivo:</p>
               <p class="info-doc4 info-doc"></p>
             </div>
             <div class="info-section">
-              <p class="info-text">Archivo 5:</p>
+              <p class="info-text">Nombre de Archivo:</p>
               <p class="info-doc5 info-doc"></p>
             </div>
             <div class="info-section">
-              <p class="info-text">Archivo 6:</p>
+              <p class="info-text">Nombre de Archivo:</p>
               <p class="info-doc5 info-doc"></p>
             </div>
           </div>
