--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Finlatina</title>
+  <link href="/img/logoVentana.png" style="border-radius: 5px" rel="icon">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
   <script src="./js/index.js" defer></script>
