Se prepara el json

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
           <div class="pre-load-section">
             <p class="titulo titulo-main">Necesitamos que suba algunos documentos</p>
             <p class="parrafo">Para abrir la cámara presione el boton de abajo</p>
-            <p class="parrafo">Suba una foto frontal de su cedula.</p>
+            <p class="parrafo">Subí una foto frontal de su cedula.</p>
 
             <div class="container-img-nombre">
               <button type="button" class="button-red button-camera">Abrir cámara</button>
@@ -667,7 +667,7 @@
               <p class="card foto-descripcion"></p>
             </div>
 
-            <p class="parrafo">Suba una foto del dorso de su cedula.</p>
+            <p class="parrafo">Subí una foto del dorso de su cedula.</p>
 
             <div class="container-img-nombre">
               <button type="button" class="button-red button-camera">Abrir cámara</button>
@@ -683,7 +683,7 @@
             </div>
 
 
-            <p class="parrafo">Suba una selfie sosteniendo su cédula.</p>
+            <p class="parrafo">Subí una selfie sosteniendo su cédula.</p>
 
             <div class="container-img-nombre">
               <button type="button" class="button-red button-camera">Abrir cámara</button>
@@ -699,7 +699,7 @@
               <p class="card foto-descripcion"></p>
             </div>
 
-            <p class="parrafo">Suba su documento Respaldatorio De Domicilio o tome una foto del documento</p>
+            <p class="parrafo">Subí el documento Respaldatorio De Domicilio o tome una foto del documento</p>
             <div class="container-img-nombre">
               <button type="button" class="button-red button-camera">Subir archivo</button>
               <input
