cambios para checkout

--- a/index.html
+++ b/index.html
@@ -715,110 +715,97 @@
             <p class="parrafo">Subí tu comprobante de ingresos (boletas de IPS o boletas de salario y certificado laboral). Si sos contribuyente del IVA, subí tu declaración jurada de los últimos 6 meses.</p>
 
             <div class="drop-area">
-              <h2>Arrastra y suelta los documentos</h2>
-              <h3>O</h3>
               <button type="button">Selecciona tus archivos</button>
               <input type="file" name="drag-drop" id="input-file" hidden multiple>
             </div>
             <div id="preview"></div>
 
-            
-
-            
-            <!-- <p class="parrafo"></p>
-            <div class="archivos-boletas">
-              <div class="drop-area">
-                <h2>Arrastra y suelta los documentos</h2>
-                <h3>O</h3>
-                <button type="button">Selecciona tus archivos</button>
-                <input type="file" name="archivos" id="input-file" hidden multiple>
-              </div>
-              <div id="preview"></div>
-            </div> -->
-
           </div>
 
-          <!-- <div class="video-container">
-                    <video class="video" src=""></video>
-                    <div class="loader"></div>
-                  </div>
-                  <div>
-                    <div class="button button-foto">Tomar Foto</div>
-                  </div>
-                  <div>
-                    <div class="select-container">
-                      <select class="input-data select-foto" name="array-list" id="select-disp"></select>
-                    </div>
-                  </div>
-                  <div class="navbar-fotos">
-                    <div class="ventana"><p>Cedula</p></div>
-                    <div class="ventana">Boletas</div>
-                    <div class="ventana">Documento Domicilio</div>
-                  </div>
-                  <div class="seccion fotos">
-                    <div class="card card-1">
-                      <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
-                      <canvas class="lienzo lienzo-1"></canvas>
-                      <p class="text-card">Imagen Frontal CI</p>
-                      <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
-                    </div>
-                    <div class="card card-2">
-                      <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
-                      <canvas class="lienzo lienzo-2"></canvas>
-                      <p class="text-card">Imagen Dorso CI</p>
-                      <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
-                    </div>
-                    <div class="card card-3">
-                      <img class="no-image no-image-3" src="./img/no-image.png" alt="no-image3">
-                      <canvas class="lienzo lienzo-3"></canvas>
-                      <p class="text-card">Selfie</p>
-                      <img class="delete-image delete-3" src="./img/red-x.webp" alt="delete3">
-                    </div>
-                  </div>
-                  <div class="seccion boletas">
-                    <div class="card card-options-client">
-                      <p>Seleccione el tipo de Cliente:</p>
-                      <button type="button" class="button button-red button-asalariado">Asalariado</button>
-                      <button type="button" class="button button-red button-comerciante">Comerciante</button>
-                    </div>
-                    <div class="lista-boletas">
-                      <div class="card card-4">
-                        <img class="no-image no-image-4" src="./img/no-image.png" alt="no-image4">
-                        <canvas class="lienzo lienzo-4"></canvas>
-                        <p class="text-card">Boleta IPS</p>
-                        <img class="delete-image delete-4" src="./img/red-x.webp" alt="delete4">
-                      </div>
-                      <div class="card card-5">
-                        <img class="no-image no-image-5" src="./img/no-image.png" alt="no-image5">
-                        <canvas class="lienzo lienzo-5"></canvas>
-                        <p class="text-card">Boleta de Salario</p>
-                        <img class="delete-image delete-5" src="./img/red-x.webp" alt="delete5">
-                      </div>
-                      <div class="asalariado-volver-contenedor">
-                        <button type="button" class="button-red button-volver-asalariado">Volver</button>
-                      </div>
-                    </div>
-                    <div class="archivos-boletas">
-                      <div class="drop-area">
-                        <h2>Arrastra y suelta los documentos</h2>
-                        <h3>O</h3>
-                        <button type="button">Selecciona tus archivos</button>
-                        <input type="file" name="" id="input-file" hidden multiple>
-                      </div>
-                      <div id="preview"></div>
-                      <div class="comerciante-volver-contenedor">
-                        <button type="button" class="button-red button-volver-comerciante">Volver</button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="seccion documento-domicilio">
-                    <div class="card card-6">
-                      <img class="no-image no-image-6" src="./img/no-image.png" alt="no-image6">
-                      <canvas class="lienzo lienzo-6"></canvas>
-                      <p class="text-card">Documento Respaldatorio De Domicilio</p>
-                      <img class="delete-image delete-6" src="./img/red-x.webp" alt="delete6">
-                    </div>
-                  </div> -->
+          <form class="form form-6" action="">
+            <div class="video-container">
+              <video class="video" src=""></video>
+              <div class="loader"></div>
+            </div>
+            <div>
+              <div class="button button-foto">Tomar Foto</div>
+            </div>
+            <div>
+              <div class="select-container">
+                <select class="input-data select-foto" name="array-list" id="select-disp"></select>
+              </div>
+            </div>
+            <div class="navbar-fotos">
+              <div class="ventana"><p>Cedula</p></div>
+              <div class="ventana">Boletas</div>
+              <div class="ventana">Documento Domicilio</div>
+            </div>
+            <div class="seccion fotos">
+              <div class="card card-1">
+                <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
+                <canvas class="lienzo lienzo-1"></canvas>
+                <p class="text-card">Imagen Frontal CI</p>
+                <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
+              </div>
+              <div class="card card-2">
+                <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
+                <canvas class="lienzo lienzo-2"></canvas>
+                <p class="text-card">Imagen Dorso CI</p>
+                <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
+              </div>
+              <div class="card card-3">
+                <img class="no-image no-image-3" src="./img/no-image.png" alt="no-image3">
+                <canvas class="lienzo lienzo-3"></canvas>
+                <p class="text-card">Selfie</p>
+                <img class="delete-image delete-3" src="./img/red-x.webp" alt="delete3">
+              </div>
+            </div>
+            <div class="seccion boletas">
+              <div class="card card-options-client">
+                <p>Seleccione el tipo de Cliente:</p>
+                <button type="button" class="button button-red button-asalariado">Asalariado</button>
+                <button type="button" class="button button-red button-comerciante">Comerciante</button>
+              </div>
+              <div class="lista-boletas">
+                <div class="card card-4">
+                  <img class="no-image no-image-4" src="./img/no-image.png" alt="no-image4">
+                  <canvas class="lienzo lienzo-4"></canvas>
+                  <p class="text-card">Boleta IPS</p>
+                  <img class="delete-image delete-4" src="./img/red-x.webp" alt="delete4">
+                </div>
+                <div class="card card-5">
+                  <img class="no-image no-image-5" src="./img/no-image.png" alt="no-image5">
+                  <canvas class="lienzo lienzo-5"></canvas>
+                  <p class="text-card">Boleta de Salario</p>
+                  <img class="delete-image delete-5" src="./img/red-x.webp" alt="delete5">
+                </div>
+                <div class="asalariado-volver-contenedor">
+                  <button type="button" class="button-red button-volver-asalariado">Volver</button>
+                </div>
+              </div>
+              <div class="archivos-boletas">
+                <div class="drop-area">
+                  <h2>Arrastra y suelta los documentos</h2>
+                  <h3>O</h3>
+                  <button type="button">Selecciona tus archivos</button>
+                  <input type="file" name="" id="input-file" hidden multiple>
+                </div>
+                <div id="preview"></div>
+                <div class="comerciante-volver-contenedor">
+                  <button type="button" class="button-red button-volver-comerciante">Volver</button>
+                </div>
+              </div>
+            </div>
+            <div class="seccion documento-domicilio">
+              <div class="card card-6">
+                <img class="no-image no-image-6" src="./img/no-image.png" alt="no-image6">
+                <canvas class="lienzo lienzo-6"></canvas>
+                <p class="text-card">Documento Respaldatorio De Domicilio</p>
+                <img class="delete-image delete-6" src="./img/red-x.webp" alt="delete6">
+              </div>
+            </div>
+
+          </form>
 
         </form>
 
