--- a/index.html
+++ b/index.html
@@ -751,7 +751,6 @@
 
         <section class="modal modal1">
           <div class="modal__container">
-            <h2 class="modal__title">asdf</h2>
             <div class="video-container">
               <video class="video" src=""></video>
               <div class="loader"></div>
@@ -768,13 +767,12 @@
 
         <section class="modal modal2">
           <div class="modal__container">
-            <h2 class="modal__title">asdf</h2>
             <div class="video-container">
               <video class="video" src=""></video>
               <div class="loader"></div>
             </div>
             <div class="select-container">
-              <select class="input-data select-foto" name="array-list" id="select-disp"></select>
+              <!-- <select class="input-data select-foto" name="array-list" id="select-disp"></select> -->
             </div>
             <div>
               <div class="button button-foto">Tomar Foto</div>
@@ -785,13 +783,12 @@
 
         <section class="modal modal3">
           <div class="modal__container">
-            <h2 class="modal__title">asdf</h2>
             <div class="video-container">
               <video class="video" src=""></video>
               <div class="loader"></div>
             </div>
             <div class="select-container">
-              <select class="input-data select-foto" name="array-list" id="select-disp"></select>
+              <!-- <select class="input-data select-foto" name="array-list" id="select-disp"></select> -->
             </div>
             <div>
               <div class="button button-foto">Tomar Foto</div>
