Las camaras se activan con un evento de click

--- a/index.html
+++ b/index.html
@@ -745,9 +745,19 @@
 
 
         </form>
-        <button type="button" class="button-red open-modal1">asdfasdf</button>
-        <button type="button" class="button-red open-modal2">asdfasdf</button>
-        <button type="button" class="button-red open-modal3">asdfasdf</button>
+
+        <div class="container-img-nombre">
+          <button type="button" class="button-red button-camera-pc open-modal1">Abrir camara</button>
+          <p class="card foto-descripcion-pc"></p>
+        </div>
+        <div class="container-img-nombre">
+          <button type="button" class="button-red button-camera-pc open-modal2">Abrir camara</button>
+          <p class="card foto-descripcion-pc"></p>
+        </div>
+        <div class="container-img-nombre">
+          <button type="button" class="button-red button-camera-pc open-modal3">Abrir camara</button>
+          <p class="card foto-descripcion-pc"></p>
+        </div>
 
         <section class="modal modal1">
           <div class="modal__container">
