Se agregan los textos a las fotos

--- a/index.html
+++ b/index.html
@@ -725,23 +725,22 @@
 
           <div class="card card-1">
             <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
-            <canvas class="lienzo lienzo-1"></canvas>
+            <!-- <canvas class="lienzo lienzo-1"></canvas> -->
             <p class="text-card">Imagen Frontal CI</p>
             <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
           </div>
           <div class="card card-2">
             <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
-            <canvas class="lienzo lienzo-2"></canvas>
+            <!-- <canvas class="lienzo lienzo-2"></canvas> -->
             <p class="text-card">Imagen Dorso CI</p>
             <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
           </div>
           <div class="card card-3">
             <img class="no-image no-image-3" src="./img/no-image.png" alt="no-image3">
-            <canvas class="lienzo lienzo-3"></canvas>
+            <!-- <canvas class="lienzo lienzo-3"></canvas> -->
             <p class="text-card">Selfie</p>
             <img class="delete-image delete-3" src="./img/red-x.webp" alt="delete3">
           </div>
-          
 
 
         </form>
