--- a/index.html
+++ b/index.html
@@ -648,55 +648,76 @@
         <!-- -------------------------- Inicio sexto formulario ----------------------------- -->
         <form class="form form-6" action="">
 
-          <div class="pre-load-section">
+          <div class="pc-form">
             <p class="titulo titulo-main">Necesitamos que suba algunos documentos</p>
             <p class="parrafo">Para abrir la cámara presione el boton de abajo</p>
             <p class="parrafo">Subí una foto frontal de su cedula.</p>
-
             <div class="container-img-nombre">
-              <button type="button" class="button-red button-camera">Abrir cámara</button>
-              <input
-                id="cameraFileInput1"
-                class="cameraFileInput button-red"
-                type="file"
-                accept="image/*"
-                capture="environment"
-                hidden
-              />
-
-              <p class="card foto-descripcion"></p>
+              <button type="button" class="button-red button-camera-pc open-modal1">Abrir camara</button>
+              <p class="card foto-descripcion-pc"></p>
             </div>
-
             <p class="parrafo">Subí una foto del dorso de su cedula.</p>
-
             <div class="container-img-nombre">
-              <button type="button" class="button-red button-camera">Abrir cámara</button>
-              <input
-                id="cameraFileInput2"
-                class="cameraFileInput"
-                type="file"
-                accept="image/*"
-                capture="environment"
-                hidden
-              />
-              <p class="card foto-descripcion"></p>
+              <button type="button" class="button-red button-camera-pc open-modal2">Abrir camara</button>
+              <p class="card foto-descripcion-pc"></p>
             </div>
-
-
             <p class="parrafo">Subí una selfie sosteniendo su cédula.</p>
-
             <div class="container-img-nombre">
-              <button type="button" class="button-red button-camera">Abrir cámara</button>
-              <input
-                id="cameraFileInput3"
-                class="cameraFileInput"
-                type="file"
-                accept="image/*"
-                capture="environment"
-                hidden
-              />
+              <button type="button" class="button-red button-camera-pc open-modal3">Abrir camara</button>
+              <p class="card foto-descripcion-pc"></p>
+            </div>
+          </div>
+          
+          <div class="pre-load-section">
+            <div class="mobile-form">
+              <p class="titulo titulo-main">Necesitamos que suba algunos documentos</p>
+              <p class="parrafo">Para abrir la cámara presione el boton de abajo</p>
+              <p class="parrafo">Subí una foto frontal de su cedula.</p>
 
-              <p class="card foto-descripcion"></p>
+              <div class="container-img-nombre">
+                <button type="button" class="button-red button-camera">Abrir cámara</button>
+                <input
+                  id="cameraFileInput1"
+                  class="cameraFileInput button-red"
+                  type="file"
+                  accept="image/*"
+                  capture="environment"
+                  hidden
+                />
+
+                <p class="card foto-descripcion"></p>
+              </div>
+
+              <p class="parrafo">Subí una foto del dorso de su cedula.</p>
+
+              <div class="container-img-nombre">
+                <button type="button" class="button-red button-camera">Abrir cámara</button>
+                <input
+                  id="cameraFileInput2"
+                  class="cameraFileInput"
+                  type="file"
+                  accept="image/*"
+                  capture="environment"
+                  hidden
+                />
+                <p class="card foto-descripcion"></p>
+              </div>
+
+              <p class="parrafo">Subí una selfie sosteniendo su cédula.</p>
+
+              <div class="container-img-nombre">
+                <button type="button" class="button-red button-camera">Abrir cámara</button>
+                <input
+                  id="cameraFileInput3"
+                  class="cameraFileInput"
+                  type="file"
+                  accept="image/*"
+                  capture="environment"
+                  hidden
+                />
+
+                <p class="card foto-descripcion"></p>
+              </div>
             </div>
 
             <p class="parrafo">Subí el documento Respaldatorio De Domicilio o tome una foto del documento</p>
@@ -722,41 +743,7 @@
 
           </div>
 
-
-          <div class="card card-1">
-            <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
-            <!-- <canvas class="lienzo lienzo-1"></canvas> -->
-            <p class="text-card">Imagen Frontal CI</p>
-            <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
-          </div>
-          <div class="card card-2">
-            <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
-            <!-- <canvas class="lienzo lienzo-2"></canvas> -->
-            <p class="text-card">Imagen Dorso CI</p>
-            <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
-          </div>
-          <div class="card card-3">
-            <img class="no-image no-image-3" src="./img/no-image.png" alt="no-image3">
-            <!-- <canvas class="lienzo lienzo-3"></canvas> -->
-            <p class="text-card">Selfie</p>
-            <img class="delete-image delete-3" src="./img/red-x.webp" alt="delete3">
-          </div>
-
-
         </form>
-
-        <div class="container-img-nombre">
-          <button type="button" class="button-red button-camera-pc open-modal1">Abrir camara</button>
-          <p class="card foto-descripcion-pc"></p>
-        </div>
-        <div class="container-img-nombre">
-          <button type="button" class="button-red button-camera-pc open-modal2">Abrir camara</button>
-          <p class="card foto-descripcion-pc"></p>
-        </div>
-        <div class="container-img-nombre">
-          <button type="button" class="button-red button-camera-pc open-modal3">Abrir camara</button>
-          <p class="card foto-descripcion-pc"></p>
-        </div>
 
         <section class="modal modal1">
           <div class="modal__container">
