Se agrega la funcion de rechazar la imagen

--- a/index.html
+++ b/index.html
@@ -758,6 +758,10 @@
             <div>
               <div class="button button-foto">Tomar Foto</div>
             </div>
+            <div class="button-container-modal">
+              <button type="button" class="button-red rechazar-foto">Rechazar</button>
+              <button type="button" class="button-red aceptar-foto">Aceptar</button>
+            </div>
           </div>
         </section>
 
@@ -774,6 +778,10 @@
             <div>
               <div class="button button-foto">Tomar Foto</div>
             </div>
+            <div class="button-container-modal">
+              <button type="button" class="button-red rechazar-foto">Rechazar</button>
+              <button type="button" class="button-red aceptar-foto">Aceptar</button>
+            </div>
           </div>
         </section>
 
@@ -789,6 +797,10 @@
             </div>
             <div>
               <div class="button button-foto">Tomar Foto</div>
+            </div>
+            <div class="button-container-modal">
+              <button type="button" class="button-red rechazar-foto">Rechazar</button>
+              <button type="button" class="button-red aceptar-foto">Aceptar</button>
             </div>
           </div>
         </section>
