Se termina la funcion de cerrar el modal con la x

--- a/index.html
+++ b/index.html
@@ -762,6 +762,7 @@
               <button type="button" class="button-red rechazar-foto">Rechazar</button>
               <button type="button" class="button-red aceptar-foto">Aceptar</button>
             </div>
+            <img src="./img/red-x.webp" class="img-close-modal" alt="cerrar-modal-1">
           </div>
         </section>
 
@@ -782,6 +783,7 @@
               <button type="button" class="button-red rechazar-foto">Rechazar</button>
               <button type="button" class="button-red aceptar-foto">Aceptar</button>
             </div>
+            <img src="./img/red-x.webp" class="img-close-modal" alt="cerrar-modal-1">
           </div>
         </section>
 
@@ -802,6 +804,7 @@
               <button type="button" class="button-red rechazar-foto">Rechazar</button>
               <button type="button" class="button-red aceptar-foto">Aceptar</button>
             </div>
+            <img src="./img/red-x.webp" class="img-close-modal" alt="cerrar-modal-1">
           </div>
         </section>
 
