--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
               </div>
             </div>
 
-            <p class="parrafo">Subí el documento Respaldatorio De Domicilio o tome una foto del documento</p>
+            <p class="parrafo">Subí el documento Respaldatorio De Domicilio</p>
             <div class="container-img-nombre">
               <button type="button" class="button-red button-camera">Subir archivo</button>
               <input
