Se agrega un nuevo icono para cerrar el modal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="/img/logoVentana.png" style="border-radius: 5px" rel="icon">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="./js/index.js" defer></script>
 </head>
 
@@ -762,7 +763,9 @@
               <button type="button" class="button-red rechazar-foto">Rechazar</button>
               <button type="button" class="button-red aceptar-foto">Aceptar</button>
             </div>
-            <img src="./img/red-x.webp" class="img-close-modal" alt="cerrar-modal-1">
+            <span class="material-symbols-outlined img-close-modal">
+              disabled_by_default
+            </span>
           </div>
         </section>
 
@@ -783,7 +786,9 @@
               <button type="button" class="button-red rechazar-foto">Rechazar</button>
               <button type="button" class="button-red aceptar-foto">Aceptar</button>
             </div>
-            <img src="./img/red-x.webp" class="img-close-modal" alt="cerrar-modal-1">
+            <span class="material-symbols-outlined img-close-modal">
+              disabled_by_default
+            </span>
           </div>
         </section>
 
@@ -804,7 +809,9 @@
               <button type="button" class="button-red rechazar-foto">Rechazar</button>
               <button type="button" class="button-red aceptar-foto">Aceptar</button>
             </div>
-            <img src="./img/red-x.webp" class="img-close-modal" alt="cerrar-modal-1">
+            <span class="material-symbols-outlined img-close-modal">
+              disabled_by_default
+            </span>
           </div>
         </section>
 
