se agrega la validacion de numero de telefono corporativo

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
 
       </div>
       <div class="button-container">
-        <button class="button button-atras">Atras</button>
+        <button class="button button-atras">Atrás</button>
         <button class="button button-volver">Volver</button>
         <button class="button-siguiente"><a href="#inicio" class="link link-disabled">Siguiente</a></button>
         <button type="reset" class="button button-confirm"><a href="#inicio" class="link-confirm">Confirmar</a></button>
