se corrige un error en la validacion del input de referencia comercial

--- a/index.html
+++ b/index.html
@@ -529,23 +529,23 @@
             <input class="input-data input-dir" type="text" autocapitalize="sentences">
             <p class="err-space"></p>
           </label>
+          <label class="calle">
+            <span class="span-input">Calle 1</span>
+            <input class="input-data input-calle1" type="text" autocapitalize="sentences">
+            <p class="err-space"></p>
+          </label>
           <div class="flex-container">
-            <label class="calle">
-              <span class="span-input">Calle 1</span>
-              <input class="input-data input-calle1" type="text" autocapitalize="sentences">
-              <p class="err-space"></p>
-            </label>
             <label class="calle">
               <span class="span-input">Calle 2</span>
               <input class="input-data input-calle2" type="text" autocapitalize="sentences">
               <p class="err-space"></p>
             </label>
+            <label class="nro-casa">
+              <span class="span-input">Nro. de Casa</span>
+              <input class="input-data numero-casa opcional" type="text" autocapitalize="sentences" placeholder="Campo opcional">
+              <p class="err-space"></p>
+            </label>
           </div>
-          <label>
-            <span class="span-input">Número de Casa (Campo Opcional)</span>
-            <input class="input-data numero-casa opcional" type="text" autocapitalize="sentences">
-            <p class="err-space"></p>
-          </label>
 
           <h3 class="titulo titulo-main">Direccion Laboral</h3>
 
@@ -563,23 +563,23 @@
             <input class="input-data input-dir-trabajo" type="text" autocapitalize="sentences">
             <p class="err-space"></p>
           </label>
+          <label class="calle">
+            <span class="span-input">Calle 1</span>
+            <input class="input-data input-calle1-trabajo" type="text" autocapitalize="sentences">
+            <p class="err-space"></p>
+          </label>
           <div class="flex-container">
-            <label class="calle">
-              <span class="span-input">Calle 1</span>
-              <input class="input-data input-calle1-trabajo" type="text" autocapitalize="sentences">
-              <p class="err-space"></p>
-            </label>
             <label class="calle">
               <span class="span-input">Calle 2</span>
               <input class="input-data input-calle2-trabajo" type="text" autocapitalize="sentences">
               <p class="err-space"></p>
             </label>
+            <label class="nro-edificio">
+              <span class="span-input">Nro. de Edificio</span>
+              <input class="input-data numero-edificio-trabajo opcional" type="text" autocapitalize="sentences" placeholder="Campo opcional">
+              <p class="err-space"></p>
+            </label>
           </div>
-          <label>
-            <span class="span-input">Numero de Edificio (Opcional)</span>
-            <input class="input-data numero-edificio-trabajo opcional" type="text" autocapitalize="sentences">
-            <p class="err-space"></p>
-          </label>
         </form>
 
         <!-- -----------------------Inicio quinto formulario----------------------------- -->
